# mongogbackup

./: .gitignore  LICENSE  README.md  credentials.json  pyproject.toml  setup.py  test.py
docs/: backups.html  files.html  gdrive.html  index.html  targz.html
mongogbackup/: __init__.py  backups.py  encrypt.py  files.py  gdrive-rfh.py  gdrive.py  mongogb.py  targz.py
mongogbackup/BackupFiles/flask_database/: todos.bson  todos.metadata.json
scripts/: deploy.bat  deploy.ps1  deploy.sh  document.bat  document.ps1  document.sh
