[build-system]
requires = 
build-backend = 

[project]
name = "mongogbackup",
version = "0.1.0"
dependencies = [
    "google-auth >= 2.31.0",
    "google-auth-oauthlib >= 1.2.0",
    "google-auth-httplib2 >= 0.2.0",
    "google-api-python-client>= 2.136.0",
    "requests >= 2.31.0",
    "pymongo >= 4.8.0",
    "cryptography >= 42.0.8"
]
requires-python = ">=3.0"
authors = [
    {name = "DevCom, IIT Bombay", email = "devcom@iitb.ac.in"}
]
maintainers = [
    {name = "DevCom, IIT Bombay", email = "devcom@iitb.ac.in"}
]
description = "Securely Backup MongoDB to Google Drive"
readme = "README.md"
license = {file="LICENSE"}
keywords = ["mongodb", "backup", "google drive", "remote"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

